fixed update check; updated spigot api to mc 1.21.4
Took 22 minutes