@@ -5,7 +5,8 @@ import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Scanner;
 import java.util.function.Consumer;
 
@@ -22,11 +23,11 @@ public class UpdateChecker {
 
     public void getVersion(final Consumer<String> consumer) {
         Bukkit.getScheduler().runTaskAsynchronously(this.plugin, () -> {
-            try (InputStream is = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId + "/~").openStream(); Scanner scann = new Scanner(is)) {
+            try (InputStream is = new URI("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId + "/~").toURL().openStream(); Scanner scann = new Scanner(is)) {
                 if (scann.hasNext()) {
                     consumer.accept(scann.next());
                 }
-            } catch (IOException e) {
+            } catch (IOException | URISyntaxException e) {
                 plugin.getLogger().info("Unable to check for updates: " + e.getMessage());
             }
         });
@@ -34,7 +35,7 @@ public class UpdateChecker {
 
     public void checkUpdate() {
         this.getVersion(version -> {
-            if (Float.parseFloat(this.plugin.getDescription().getVersion()) < Float.parseFloat(version)) {
+            if (this.plugin.getDescription().getVersion().equals(version)) {
                 this.plugin.getLogger().info("Plugin is up to date!");
             } else {
                 this.plugin.getLogger().info("There is a new update available " +
